--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
+      @keyframes fillProgress {
+        0% { width: 0%; }
+        100% { width: 100%; }
+      }
+      .animate-fill {
+        animation: fillProgress 3s ease-in-out forwards;
+      }
     </style>
+    <!-- 
+      META PIXEL CODE
+    -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      
+      fbq('init', '852155014655949');
+      fbq('track', 'PageView');
+    </script>
+    <!-- END META PIXEL CODE -->
   <script type="importmap">
 {
   "imports": {
