--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz @keto_carnivoras_news</title>
+    
+    <!-- Título Otimizado para SEO e Compartilhamento -->
+    <title>Quiz: Qual seu Arquétipo Carnívoro?</title>
+    <meta name="description" content="Responda 7 perguntas e descubra a estratégia exata para destravar seu metabolismo. Gratuito e Personalizado." />
+
+    <!-- Open Graph / Facebook / WhatsApp Preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://quiz.ketocarnivoro.com/" />
+    <meta property="og:title" content="Quiz: Qual seu Arquétipo Carnívoro?" />
+    <meta property="og:description" content="Você é Pragmático, Hedonista ou Iniciante? Descubra qual estratégia de dieta funciona para o seu corpo." />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1615937691194-97dbd3f3dc29?q=80&w=1200&auto=format&fit=crop" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Quiz: Qual seu Arquétipo Carnívoro?" />
+    <meta property="twitter:description" content="Descubra a estratégia exata para destravar seu metabolismo em 45 segundos." />
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1615937691194-97dbd3f3dc29?q=80&w=1200&auto=format&fit=crop" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
